--- a/PC_RENT_PLATFORM/backend/package.json
+++ b/PC_RENT_PLATFORM/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
+    "express-mysql-session": "^3.0.0",
+    "express-session": "^1.18.0",
     "mysql2": "^3.9.2"
   }
 }
